--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,4 +12,4 @@
 	<%= form.submit :create %> 
 <% end %>
 
-<h2> Already have an account? <a href ="/"> Log in! </a> </h2>
+<h2> Already have an account? <a href ="/sessions/new"> Log in! </a> </h2>
