--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,6 @@
-<h2> <%= @post.title %> </h2>
+<div class="posts">
+	<h2> <%= @post.title %> </h2>
+	<h3> <%= @post.body %> </h3>
+</div>
 
-<p> <%= @post.body %> </p>
-
+<a href ="new"> Write another post! </a>
