added styling and worked on sessions

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.signup_box {
+	background-color: teal;
+	color: white;
+	padding: 10px;
+	border-radius: 20px;
+	width: 270px;
+	margin: auto;
+	margin-top: 200px;
+	text-align: center;
+}
+
