--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.posts {
+	background-color: teal;
+	color: white;
+	padding: 10px;
+	border-radius: 20px;
+	width: 270px;
+	margin: auto;
+	margin-top: 200px;
+}
+
+h3 {
+	text-weight: light;
+}
+
+* {
+	text-align: center;
+}
