--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,13 @@
+<div class="posts">
+
 <h1> Write a new post: </h1>
   
-<%= form_for @post do |f| %>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-    <%= f.submit "publish" %>
-<% end %>
+	<%= form_for @post do |f| %>
+    	<p> <%= f.label :title %>
+    	<%= f.text_field :title %> </p>
+    	<p> <%= f.label :body %>
+    	<%= f.text_area :body %> </p>
+    	<%= f.submit "publish" %>
+	<% end %>
+
+</div>
