--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,20 @@
-<h1> Sign Up! </h1>
+<div class = "signup_box">
 
-<%= form_for @user do |form| %>   
-	<%= form.label :fname %>   
-	<%= form.text_field :fname %>
-	<%= form.label :lname %>   
-	<%= form.text_field :lname %>
-	<%= form.label :email %>   
-	<%= form.text_field :email %>
-	<%= form.label :password %>   
-	<%= form.text_field :password %>       
-	<%= form.submit :create %> 
-<% end %>
+	<h1> Sign Up! </h1>
 
-<h2> Already have an account? <a href ="/sessions/new"> Log in! </a> </h2>
+	<%= form_for @user do |form| %>   
+		<p> <%= form.label :fname %>  
+		<%= form.text_field :fname %> </p> 
+		<p> <%= form.label :lname %> 
+		<%= form.text_field :lname %> </p> 
+		<p> <%= form.label :email %>  
+		<%= form.text_field :email %> </p> 
+		<p> <%= form.label :password %>    
+		<%= form.text_field :password %> </p>       
+		<p> <%= form.submit :create %> </p>
+
+	<% end %>
+
+	<h3> Already have an account? <a href ="/sessions/new"> Log in! </a> </h3>
+
+</div>
